assets/css/main.css
body,
input,
select,
textarea,
button {
  font-family: Ubuntu, sans;
  font-size: 16px;
}
pre,
code {
  font-family: Inconsolata, monospace;
  font-size: 14px;
}
html,
body {
  box-sizing: border-box;
  font-size: 16px;
  line-height: 1.4em;
  min-height: 100vh;
  margin: 0;
  padding: 0;
}
body {
  background-color: #333;
}
p,
li {
  line-height: 1.6em;
}
ul,
ol {
  padding-left: 15px;
}
code {
  background-color: #f9f9f9;
  color: #222;
  display: inline;
  padding: 0;
  margin: 0;
}
h1,
h1 code {
  font-size: 32px;
  line-height: 1.2em;
}
h2,
h2 code {
  font-size: 24px;
  line-height: 1.2em;
}
h3,
h3 code {
  font-size: 20px;
  line-height: 1.2em;
}
h4,
h4 code {
  font-size: 18px;
  line-height: 1.2em;
}
p code,
li code {
  font-size: 16px;
  line-height: 1.2em;
}
h1 code,
h2 code,
h3 code,
h4 code,
p code,
li code,
span code {
  border: 1px solid #e6e6e6;
  display: inline-block;
  line-height: 1em;
  padding: 1px 2px;
  margin-left: 2px;
  margin-right: 1px;
  margin-bottom: 1px;
  vertical-align: middle;
}
pre {
  border: 1px solid #e6e6e6;
  background-color: #f9f9f9;
  color: #222;
  font-size: 15px;
  line-height: 18px;
  overflow-x: auto;
  padding: 12px;
  padding-top: 0;
  word-break: break-all;
  word-wrap: break-word;
}
.off-screen {
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  left: -999em;
  overflow: hidden;
  position: absolute;
  width: 1px;
}
.main-container {
  background-color: #fff;
  color: #222;
  height: 100%;
  min-height: 100%;
  min-height: 100vh;
  max-width: 800px;
  margin: 0px auto;
  padding: 0;
  position: relative;
  width: 100%;
}
.body-container {
  padding-bottom: 62px;
}
.page-header {
  background-color: #101010;
  color: #fff;
  font-weight: bold;
  margin-top: -1px;
  padding: 18px;
  padding-bottom: 1px;
}
.page-header h1 {
  margin-top: 6px;
}
.page-header a {
  text-decoration: none;
}
.page-header a,
.page-header a:visited {
  color: #f0f0f0;
}
.page-header a:hover,
.page-header a:focus {
  color: #fff;
  text-decoration: underline;
}
.page-header ul {
  list-style: none;
  margin-left: 0;
  padding-left: 0;
}
.page-header li {
  display: inline-block;
  padding-right: 8px;
}
.skip-to-content:focus {
  background: #fff;
  border: 2px solid #bbb;
  color: #000;
  clip: initial;
  display: block;
  height: auto;
  overflow: initial;
  padding: 12px 24px;
  position: absolute;
  top: 12px;
  left: 12px;
  width: auto;
  z-index: 10;
}
a.skip-to-content,
a.skip-to-content:hover,
a.skip-to-content:focus {
  color: #222;
}
.page-header #site-search {
  background-color: #efefef;
  border: 0;
  margin-right: 8px;
  padding: 4px;
  max-width: 120px;
}
@media (min-width: 414px) {
  .page-header #site-search {
    margin-top: 8px;
    top: 1.5em;
    position: absolute;
    right: 12px;
  }
}
.highlight {
  background-color: #fff34d;
}
.highlight {
  padding: 0;
  margin: 0;
}
.post-header {
  font-style: italic;
}
.post-header .post-meta .category,
.post-header .post-meta .author,
.post-header .post-meta .twitter {
  display: none;
}
.post-header .post-meta .time-to-read,
.post-header .post-meta .date {
  display: block;
}
.post-header .post-meta .time-to-read:before {
  content: "Time to read:";
  display: inline-block;
  margin-right: 4px;
  width: 100px;
}
.post-header .post-meta .date:before {
  content: "Published:";
  display: inline-block;
  margin-right: 4px;
  width: 100px;
}
.post-header .tags span,
.post-header .tags span {
  margin-right: 4px;
}

.post-header .tags:before,
.post-footer .tags:before {
  content: "Tags:";
  display: inline-block;
  margin-right: 4px;
  width: 95px;
}
.post-content,
.post-footer {
  padding: 0;
  padding-left: 18px;
  padding-right: 18px;
}
@media (min-width: 640px) {
  .post-content,
  .post-footer {
    padding: 0;
    padding-left: 72px;
    padding-right: 72px;
  }
}
.post-content {
  padding-top: 1em;
}
ul.posts,
ul.categories,
ul.tags {
  list-style: none;
  list-style-position: inside;
  margin-left: 0;
  padding-left: 0;
}
ul.posts li {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 100%;
}
.post-footer {
  font-style: italic;
  margin: 0 auto;
  margin-top: 12px;
}
.post-footer .post-meta .category:before {
  content: "Category:";
  display: inline-block;
  margin-right: 4px;
  width: 100px;
}
.post-footer .post-meta .category {
  display: block;
}
.post-footer .post-meta .twitter,
.post-footer .post-meta .time-to-read,
.post-footer .post-meta .date {
  display: none;
}
.post-footer .post-meta .author:before {
  content: "Author:";
  display: inline-block;
  margin-right: 4px;
  width: 100px;
}
.post-footer .post-meta .author {
  display: inline-block;
}
.post-footer .tags {
  display: none;
}
.prev-next-posts {
  font-style: italic;
  list-style: none;
  padding: 0;
}
.prev-next-posts span {
  display: inline-block;
  width: 96px;
}
.footer {
  position: absolute;
  background-color: #101010;
  color: #fff;
  bottom: 0;
  margin: 0 auto;
  text-align: center;
  width: 100%;
}
.footer a {
  color: #efefef;
}
.footer a:hover,
.footer a:focus {
  color: #fff;
}
.contact-form {
  margin-bottom: 28px;
}
.contact-form label {
  display: inline-block;
  min-width: 70px;
  vertical-align: top;
  line-height: 2.75em;
}
.contact-form input,
.contact-form textarea {
  appearance: none;
  background: none;
  border: 1px solid #ccc;
  border-radius: 2px;
  font-size: 16px;
  padding: 8px;
  margin: 4px;
  min-width: 280px;
}
.contact-form textarea {
  min-height: 100px;
}
.contact-form button[type="submit"] {
  color: #fff;
  cursor: pointer;
  background-color: #222;
  border: 0;
  padding: 8px;
  margin-left: 4px;
}
@media (min-width: 416px) {
  .contact-form button[type="submit"] {
    margin-left: 78px;
  }
}
.contact-form button[type="submit"]:hover,
.contact-form button[type="submit"]:focus {
  background-color: #000;
}
.post-preview {
  border-bottom: 1px solid #ccc;
  padding-bottom: 12px;
}
.post-preview h2,
.post-preview time {
  display: inline-block;
}
.post-preview h2 {
  margin-right: 4px;
  margin-bottom: 8px;
}
.post-preview .post-meta {
  font-style: italic;
  padding: 0;
  margin: 0;
}
.post-preview .post-meta li {
  display: inline-block;
}
.post-preview .post-meta li:nth-child(1):before {
  content: "Time to read:";
  display: inline-block;
  margin-right: 4px;
}
.post-preview .tags {
  font-style: italic;
}
.post-preview .tags:before {
  content: "Tags:";
  margin-right: 4px;
}
.post-preview .post-meta li:nth-child(1):before {
  content: "Time to read:";
  display: inline-block;
  margin-right: 4px;
}
.post-preview .post-meta li:nth-child(2),
.post-preview .post-meta li:nth-child(3),
.post-preview .post-meta li:nth-child(4),
.post-preview .post-meta li:nth-child(5) {
  display: none;
}
.post-preview .tags {
  padding: 0;
  margin: 0;
}
.post-preview .tags li {
  display: inline-block;
  padding-right: 5px;
}

.archive-posts li span {
  margin-right: 4px;
}

/* search page */
.search-box input {
  padding: 8px;
  border: 1px solid #ccc;
}

.search-box button {
  color: #fff;
  cursor: pointer;
  background-color: #222;
  border: 0;
  padding: 8px;
  margin-left: 4px;
}
.search-back {
  display: block;
  margin-bottom: 24px;
}
.search-results {
  display: block;
  margin-bottom: 36px;
}
.search-results .result {
  display: none;
  margin-bottom: 16px;
}

